2008-08-21  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.Designer.cs, Frontend-SWF.mdp, SwfUI.cs, RichTextBoxEx.cs,
	  Entry.cs, NotImplementedMessageDialog.cs: Fixed whitespace (replaced \t
	  with 4 spaces).

2008-08-04  Mirco Bauer <meebey@meebey.net> 

	* Chats/ChatView.cs: Don't use hardcoded value.
	* ColorTools.cs: Using HexCode property now.

2008-07-29  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Frontend-SWF.mdp, Chats/ChatView.cs, ColorTools.cs,
	  Entry.cs: Implemented theming support for chat page and command entry.

2008-07-29  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs: Fixed indention.
	
	  Apply theming settings.
	* Chats/ChatView.cs: Implemented theme support of background and foreground
	  color.
	* ChatViewManager.cs: Apply theming settings.

2008-07-28  Mirco Bauer <meebey@meebey.net> 

	* Frontend-SWF.mdp: Build as WinExe.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Frontend-SWF.mdp: Removed assembly attributes that are now part of the
	  shared AssemblyVersion.cs file.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.6.0.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	

2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.31

2008-01-31  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.30.

2007-12-25  Mirco Bauer <meebey@meebey.net> 

	* Frontend-SWF.mdp: Updated using MonoDevelop 0.18.1
